--- a/index.html
+++ b/index.html
@@ -3,73 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Quest: Progressive Mastery</title>
+    <title>English Quest: Infinite Edition</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
-        :root { --primary: #58cc02; --boss: #854dff; --error: #ff4b4b; --gray: #e5e5e5; --blue: #1cb0f6; }
-        body { font-family: 'Outfit', sans-serif; margin: 0; background: #fff; overflow-x: hidden; color: #3c3c3c; }
+        :root { --primary: #58cc02; --error: #ff4b4b; --blue: #1cb0f6; --gray: #e5e5e5; }
+        body { font-family: 'Outfit', sans-serif; margin: 0; background: #f0f2f5; color: #3c3c3c; }
         
-        /* Dashboard */
-        .top-nav { position: sticky; top: 0; background: white; border-bottom: 2px solid var(--gray); padding: 15px; display: flex; justify-content: space-around; z-index: 100; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05); }
-        .stat { font-weight: 900; font-size: 1.1rem; display: flex; align-items: center; gap: 5px; }
+        .header { position: sticky; top: 0; background: white; padding: 15px; display: flex; justify-content: space-around; border-bottom: 2px solid var(--gray); z-index: 100; }
+        .stat { font-weight: 900; }
 
-        /* Level Map */
-        .path { display: flex; flex-direction: column-reverse; align-items: center; padding: 60px 0; background: #f7f7f7; min-height: 100vh; }
-        .level-node { 
-            width: 80px; height: 80px; border-radius: 50%; border: none; margin: 15px 0;
-            color: white; font-weight: 900; cursor: pointer; transition: 0.2s;
-            box-shadow: 0 8px 0 #afafaf; background: var(--gray); font-size: 1.4rem;
-        }
-        .unlocked { background: var(--primary); box-shadow: 0 8px 0 #46a302; }
-        .boss-node { background: #3c3c3c !important; box-shadow: 0 8px 0 #1a1a1a !important; border: 4px solid var(--boss); }
-        .current { transform: scale(1.15); filter: brightness(1.1); }
+        .path { display: flex; flex-direction: column-reverse; align-items: center; padding: 60px 0; }
+        .node { width: 70px; height: 70px; border-radius: 50%; border: none; margin: 10px 0; color: white; font-weight: 900; cursor: pointer; transition: 0.2s; box-shadow: 0 6px 0 #afafaf; background: var(--gray); }
+        .unlocked { background: var(--primary); box-shadow: 0 6px 0 #46a302; }
+        .current { transform: scale(1.2); border: 4px solid var(--blue); }
 
-        /* UI Overlays */
+        .jump-box { position: fixed; bottom: 20px; right: 20px; }
+        .btn-jump { background: var(--blue); color: white; border: none; padding: 15px 25px; border-radius: 50px; font-weight: 900; cursor: pointer; box-shadow: 0 5px 0 #1589bd; }
+
         .overlay { position: fixed; inset: 0; background: white; display: none; flex-direction: column; z-index: 200; }
-        .lesson-header { padding: 20px; display: flex; align-items: center; gap: 15px; }
-        .progress-rail { flex-grow: 1; height: 16px; background: var(--gray); border-radius: 8px; overflow: hidden; }
-        .progress-fill { height: 100%; background: var(--primary); width: 0%; transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-        
-        .lesson-body { padding: 40px 20px; max-width: 550px; margin: 0 auto; width: 100%; text-align: center; }
-        .type-label { color: var(--blue); text-transform: uppercase; font-weight: 900; letter-spacing: 1px; font-size: 0.8rem; margin-bottom: 10px; display: block; }
-        .question { font-size: 1.8rem; font-weight: 700; margin-bottom: 35px; line-height: 1.3; }
-
-        .option-grid { display: grid; gap: 12px; }
-        .opt { 
-            padding: 20px; border: 2px solid var(--gray); border-bottom: 6px solid var(--gray);
-            border-radius: 18px; background: white; font-size: 1.15rem; font-weight: 700;
-            cursor: pointer; transition: 0.1s; text-align: left;
-        }
-        .opt:hover:not(:disabled) { background: #f8fafc; border-color: #cbd5e1; }
-        .opt:active { transform: translateY(4px); border-bottom-width: 2px; }
-        .correct { background: #dcfce7 !important; border-color: var(--primary) !important; color: #166534; }
-        .wrong { background: #fee2e2 !important; border-color: var(--error) !important; color: #991b1b; }
+        .lesson-body { padding: 40px 20px; max-width: 500px; margin: 0 auto; text-align: center; width: 100%; box-sizing: border-box; }
+        .q-text { font-size: 1.5rem; font-weight: 700; margin-bottom: 30px; }
+        .opt { display: block; width: 100%; padding: 15px; margin: 10px 0; border: 2px solid var(--gray); border-radius: 15px; background: white; font-weight: 700; cursor: pointer; }
+        .correct { background: #dcfce7 !important; border-color: var(--primary) !important; }
+        .wrong { background: #fee2e2 !important; border-color: var(--error) !important; }
     </style>
 </head>
 <body>
 
-    <div class="top-nav">
-        <div class="stat" style="color:var(--primary)">🎯 <span id="user-lvl">1</span></div>
-        <div class="stat" style="color:var(--error)">❤️ <span id="hearts-val">5</span></div>
-        <div class="stat" style="color:var(--blue)">💎 <span id="gems-val">0</span></div>
+    <div class="header">
+        <div class="stat" style="color:var(--primary)">LVL <span id="ui-lvl">1</span></div>
+        <div class="stat" style="color:var(--error)">❤️ <span id="ui-hearts">5</span></div>
     </div>
 
     <div class="path" id="map"></div>
 
-    <div class="overlay" id="lesson-ui">
-        <div class="lesson-header">
-            <button onclick="exitLesson()" style="border:none; background:none; font-size:2rem; cursor:pointer">✕</button>
-            <div class="progress-rail"><div class="progress-fill" id="p-fill"></div></div>
+    <div class="jump-box">
+        <button class="btn-jump" onclick="requestJump()">⚡ JUMP +10</button>
+    </div>
+
+    <div class="overlay" id="ui-lesson">
+        <div style="padding: 15px; border-bottom: 2px solid var(--gray); display: flex; align-items: center; gap: 20px;">
+            <button onclick="exit()" style="border:none; background:none; font-size:2rem; cursor:pointer">✕</button>
+            <div style="flex-grow:1; height:12px; background:var(--gray); border-radius:6px; overflow:hidden;">
+                <div id="p-bar" style="height:100%; background:var(--primary); width:0%; transition:0.3s;"></div>
+            </div>
         </div>
-        <div class="lesson-body" id="lesson-content"></div>
+        <div class="lesson-body" id="l-content"></div>
     </div>
 
 <script>
-    // --- DATABASE POR DIFICULTAD ---
-    const content = {
-        beginner: [ // Nivel 1-20
-            { t: "Grammar", q: "I ___ a student.", a: ["am", "is", "are"], c: 0 },
-            { t: "Translation", q: "¿Cómo se dice 'Manzana'?", a: ["Pineapple", "Apple", "Grape"], c: 1 },
+    // --- MOTOR INFINITO (Generador de Frases) ---
+    const vocabulary = {
+        subjects: ["The manager", "A student", "My parents", "The scientist", "The CEO", "An artist", "The team"],
+        actions: [
+            { v: "working", prep: "on", lvl: 1 },
+            { v: "looking forward", prep: "to", lvl: 20 },
+            { v: "accustomed", prep: "to", lvl: 40 },
+            { v: "responsible", prep: "for", lvl: 10 },
+            { v: "interested", prep: "in", lvl: 5 }
+        ],
+        objects: ["the new project", "learning French", "solving the issue", "meeting the clients", "improving the code"]
+    };
+
+    let userLvl = parseInt(localStorage.getItem('inf_lvl')) || 1;
+    let hearts = 5;
+    let session = { active: false, step: 0, total: 5, jump: false, questions: [] };
+
+    const audio = new (window.AudioContext || window.webkitAudioContext)();
+    function beep(f) {
+        const o = audio.createOscillator(); const g = audio.createGain();
+        o.connect(g); g.connect(audio.destination); o.frequency.value = f;
+        g.gain.setValueAtTime(0.1, audio.currentTime); g.gain.linearRampToValueAtTime(0, audio.currentTime + 0.3);
+        o.start(); o.stop(audio.currentTime + 0.3);
+    }
+
+    function generateQuestion(lvl) {
+        const type = Math.random() > 0.5 ? 'preposition' : 'tense';
+        const subj = vocabulary.subjects[Math.floor(Math.random() * vocabulary.subjects.length)];
+        const action = vocabulary.actions.filter(a => a.lvl <= lvl).sort(() => 0.5 - Math.random())[0];
+        const obj = vocabulary.objects[Math.floor(Math.random() * vocabulary.objects.length)];
+
+        if(type === 'preposition') {
+            return {
+                q: `${subj} is ${action.v} ____ ${obj}.`,
+                a: [action.prep, "at", "with"].sort(() => 0.5 - Math.random()),
+                c: action.prep
+            };
+        } else {
+            return {
+                q: `If I ____ you, I would study more. (Lvl ${lvl} logic)`,
+                a: ["was", "were", "am"],
+                c: "were"
+            };
+        }
+    }
+
+    function renderMap() {
+        const map = document.getElementById('map'); map.innerHTML = '';
+        for(let i = 1; i <= 100; i++) {
+            const btn = document.createElement('button');
+            btn.className = `node ${i <= userLvl ? 'unlocked' : ''} ${i === userLvl ? 'current' : ''}`;
+            btn.innerHTML = i;
+            btn.onclick = () => start(i);
+            btn.style.marginLeft = `${Math.sin(i) * 50}px`;
+            map.appendChild(btn);
+        }
+        document.getElementById('ui-lvl').innerText = userLvl;
+        window.scrollTo(0, document.body.scrollHeight);
+    }
+
+    function start(lvl, isJump = false) {
+        if(lvl > userLvl && !isJump) return;
+        session = { active: true, step: 0, total: isJump ? 10 : 5, jump: isJump, target: lvl, questions: [] };
+        for(let i=0; i<session.total; i++) session.questions.push(generateQuestion(lvl));
+        document.getElementById('ui-lesson').style.display = 'flex';
+        renderQ();
+    }
+
+    function renderQ() {
+        const q = session.questions[session.step];
+        const cont = document.getElementById('l-content');
+        document.getElementById('p-bar').style.width = `${(session.step / session.total) * 100}%`;
+        document.getElementById('ui-hearts').innerText = hearts;
+
+        cont.innerHTML = `
+            <div style="color:var(--blue); font-weight:900; margin-bottom:10px;">${session.jump ? '🔥 JUMP TEST' : 'LEVEL ' + session.target}</div>
+            <div class="q-text">${q.q}</div>
+            ${q.a.map(opt => `<button class="opt" onclick="check('${opt}', '${q.c}')">${opt}</button>`).join('')}
+        `;
+    }
+
+    function check(ans, correct) {
+        const all = document.querySelectorAll('.opt');
+        if(ans === correct) {
+            beep(600);
+            session.step++;
+            if(session.step >= session.total) {
+                if(session.jump) userLvl = session.target; else if(session.target === userLvl) userLvl++;
+                localStorage.setItem('inf_lvl', userLvl);
+                alert("SUCCESS!"); exit(); renderMap();
+            } else renderQ();
+        } else {
+            beep(200);
+            hearts--;
+            if(session.jump || hearts <= 0) { alert("FAILED! Progress reset."); hearts=5; exit(); }
+            else renderQ();
+        }
+    }
+
+    function requestJump() {
+        const target = userLvl + 10;
+        if(confirm(`Attempt Jump to Level ${target}? Fail = Game Over.`)) start(target, true);
+    }
+
+    function exit() { document.getElementById('ui-lesson').style.display = 'none'; }
+    renderMap();
+</script>
+</body>
+</html>
             { t: "Grammar", q: "She ___ to music every day.", a: ["listen", "listens", "listening"], c: 1 }
         ],
         intermediate: [ // Nivel 21-50
